syntax = "proto3";
option csharp_namespace = "Shinomiya.Protobuf.Funimation";
package funimation;

import "google/protobuf/any.proto";

service Funimation {
	rpc GetShows (GetShowsRequest) returns (Response);
}

// requests / responses

message GetShowsRequest {
	int32 limit = 1;
	int32 offset = 2;
}

message Response {
	message Facet {
		string name = 1;
		int32 count = 2;
	}
	message FacetList {
		repeated Facet value = 1;
	}

	int32 count = 1;
	int32 limit = 2;
	int32 offset = 3;
	int32 total = 4;
	map<string, FacetList> facets = 5;
	repeated google.protobuf.Any items = 6;
}

// the "models"

message Show {
	message Synopsis {
		string short_synopsis = 1;
		string medium_synopsis = 2;
		string long_synopsis = 3;
		string full_synopsis = 4;
	}
	message TitleImages {
		string show_logo = 1;
		string show_thumbnail = 2;
	}

	int32 item_id = 1;
	string title = 2;
	Synopsis synopsis = 3;
	double star_rating = 4;
	repeated string genres = 5;
	TitleImages title_images = 6;
}